--- a/index.html
+++ b/index.html
@@ -118,9 +118,6 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nobis ex illum fugiat perspiciatis eaque sed itaque voluptates excepturi expedita amet incidunt accusamus nihil et facere similique sit error! Inventore!
-            </p>
           </div>
         </div>
 
@@ -134,7 +131,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>The Skills section on my portfolio website highlights my expertise and technical abilities. It showcases the tools, technologies, and programming languages I am proficient in, demonstrating my capability to handle various projects. This section reflects my continuous learning and growth in the industry.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -214,7 +211,7 @@
 
             <div class="resume-item pb-0">
               <h4>Muhammad Fariz</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>junior web developer with more than 1 year of experience in frontend and backend web design. currently continuing his studies in software engineer</em></p>
               <ul>
                 <li>West Cikarang, Bekasi, Indonesia</li>
                 <li>(+62) 819-9971-8840</li>
@@ -227,7 +224,7 @@
               <h4>bachelor of software engineering</h4>
               <h5>2015 - 2016</h5>
               <p><em>IDN Polithecnic, Bogor</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Being a competent talent in the workforce requires adequate skills and the ability to adapt to industry developments. In an ever-changing environment, having relevant technical expertise is not enough-it also requires soft skills such as communication, teamwork, and problem-solving.</p>
             </div><!-- Edn Resume Item -->
 
 
@@ -246,7 +243,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>The profile images on my portfolio website represent my presence on Instagram, GitHub, and LinkedIn. Each icon visually connects to its respective platform, reflecting different aspects of my work and professional journey. Instagram showcases my creative side, GitHub highlights my coding projects, and LinkedIn represents my professional network and career growth.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -266,7 +263,7 @@
               <img src="assets/img/instagram1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Instagram Profile</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>An Instagram profile with an exploration and travel vibe, featuring a casual profile picture, story highlights from trips to places like Jogja, Rinjani, and Palembang, and a bio reflecting an interest in nature, especially mangrove forests.</p>
                 <a href="assets/img/instagram1.png" title="Instagram Profile" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -276,9 +273,9 @@
               <img src="assets/img/linkedin1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Linkedin Profile</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>The image is a LinkedIn profile of Muhammad Fariz Maruf, who is associated with IDN Politeknik and IDN Boarding School, located in Bekasi, West Java, Indonesia.</p>
                 <a href="assets/img/linkedin1.jpg" title="Linkedin Profile" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="linkedin-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -286,9 +283,9 @@
               <img src="assets/img/github1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Github Profile</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>The image shows a GitHub profile of a junior programmer who is still developing their skills, with an option to edit the profile and view organizations.</p>
                 <a href="assets/img/github1.png" title="Github Profile" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="github-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -296,7 +293,7 @@
               <img src="assets/img/instagram2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cloud view post</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>Aesthetic sky view with a dreamy pink hue, captured from a moving vehicle with buses and a streetlamp in the frame.</p>
                 <a href="assets/img/instagram2.jpg" title="Cloud view post" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -316,9 +313,9 @@
               <img src="assets/img/github2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Github Bio</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>The image appears to be a GitHub stats table with data on commits, PRs, issues, and most used languages, along with a quote about software development.</p>
                 <a href="assets/img/github2.png" title="Github Bio" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="github-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -326,7 +323,7 @@
               <img src="assets/img/instagram3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Green leaf post</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>A vibrant close-up of delicate green leaves, bathed in soft natural light, showcasing intricate details and textures.</p>
                 <a href="assets/img/instagram3.jpg" title="Green leaf post" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -346,9 +343,10 @@
               <img src="assets/img/github3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Github Repository</h4>
-                <p>Lorem ipsum, dolor sit</p>
+                <p>and this one
+                  The image displays a GitHub profile showcasing popular repositories, including projects in HTML and Dart, along with a contribution activity graph indicating 32 contributions in the last year.</p>
                 <a href="assets/img/github3.png" title="Github Repository" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="instagram-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="github-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
