--- a/instagram-details.html
+++ b/instagram-details.html
@@ -167,9 +167,9 @@
         </strong>
         </h5>
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.facebook.com/share/19XeDz7BA9/"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/rupp._?igsh=MnN5NWs2amtweGd4"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/muhammad-fariz-ma-ruf-annabil-887780317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="container">
           <div class="copyright">
